Add PUT /requests/:requestId
